// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recapitalization - P1 Gas Reporting Backing Manager - Grant Allowances 1`] = `360973`;

<<<<<<< HEAD
exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 1`] = `30513`;
=======
exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 2`] = `2735567`;
>>>>>>> master

exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 2`] = `2734255`;

<<<<<<< HEAD
exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 3`] = `43127`;
=======
exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 4`] = `594481`;
>>>>>>> master

exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 4`] = `594615`;

<<<<<<< HEAD
exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 5`] = `194921`;
=======
exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 6`] = `2776993`;
>>>>>>> master

exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 6`] = `2775681`;

<<<<<<< HEAD
exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 7`] = `177844`;
=======
exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 8`] = `4124043`;
>>>>>>> master

exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 8`] = `4122973`;

<<<<<<< HEAD
exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 9`] = `197775`;

exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 10`] = `1268224`;
=======
exports[`Recapitalization - P1 Gas Reporting Settle Trades / Manage Funds 10`] = `1270024`;
>>>>>>> master
